# playmq

./: .gitignore  CMakeLists.txt  build.sh
client/: CMakeLists.txt  client.cpp
client/include/: Client.h  IGameState.hpp  IScreen.hpp  InputHandler.h  MenuScreen.h  Renderer.h  TankGameScreen.h
client/src/: Client.cpp  InputHandler.cpp  MenuScreen.cpp  Renderer.cpp  TankGameScreen.cpp
common/: CommonConfig.cmake
common/include/: InputFrame.hpp  PlayerState.hpp  RateController.hpp
server/: CMakeLists.txt  server.cpp
server/include/: Player.h  PlayerState.hpp  Server.h
server/src/: Player.cpp  Server.cpp
